refactor: use ArrayDeque and switch to using FloorData only